# self-forcing-diffusers

./: .gitignore  README.md  pyproject.toml
scripts/: autoregressive_video_generation.py  convert_self_forcing_to_diffusers.py  generate_cat_video.py  validate_self_forcing_against_upstream.py
src/self_forcing_diffusers/: __init__.py  hf_assets.py  model_patches.py  parity_runner.py  rolling_kv.py  sf_inference.py
tests/: test_conversion.py  test_hf_assets.py  test_parity_runner.py  test_validation_helpers.py
