[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "self-forcing-diffusers"
version = "0.1.0"
description = "Self-Forcing conversion, validation, and E2E generation using WanRollingKVCache from diffusers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.7.0",
    "av==13.1.0",
    "diffusers",
    "easydict>=1.13",
    "einops>=0.8.0",
    "ftfy>=6.3.0",
    "huggingface-hub>=0.30.0",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "numpy>=1.26.0",
    "opencv-python>=4.9.0.80",
    "Pillow>=10.0.0",
    "safetensors>=0.5.0",
    "sentencepiece>=0.2.0",
    "torch>=2.8.0",
    "torchvision>=0.19.0",
    "transformers>=4.52.0",
]

[project.scripts]
sf-e2e-parity = "self_forcing_diffusers.parity_runner:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]

[tool.uv.sources]
diffusers = { git = "https://github.com/gueraf/diffusers.git", branch = "wan-rolling-kv-cache" }

[tool.pytest.ini_options]
testpaths = ["tests"]
